tests/baselines/reference/getAndSetNotIdenticalType.errors.txt
tests/cases/compiler/getAndSetNotIdenticalType.ts(2,9): error TS2380: The return type of a 'get' accessor must be assignable to its 'set' accessor type


==== tests/cases/compiler/getAndSetNotIdenticalType.ts (1 errors) ====
    class C {
        get x(): number {
            ~
!!! error TS2380: The return type of a 'get' accessor must be assignable to its 'set' accessor type
            return 1;
        }
        set x(v: string) { }
    }